# ChangeLog for dev-db/sqlite
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.445 2013/01/05 22:37:50 pinkbyte Exp $

  05 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> sqlite-3.7.15.1.ebuild:
  Add support for building static library, wrt bug #417907. Thanks to ari
  edelkind <edelkind-gentoo-bugzilla AT episec.com> for discovering this issue
  and providing patch

  01 Jan 2013; Raúl Porcel <armin76@gentoo.org> sqlite-3.7.14.1.ebuild:
  s390/sh stable wrt #446522

  30 Dec 2012; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.14.1.ebuild:
  Stable for alpha, wrt bug #446522

  29 Dec 2012; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.14.1.ebuild:
  Stable for sparc, wrt bug #446522

  23 Dec 2012; Markus Meier <maekke@gentoo.org> sqlite-3.7.14.1.ebuild:
  arm stable, bug #446522

*sqlite-3.7.15.1 (20 Dec 2012)

  20 Dec 2012; Markos Chandras <hwoarang@gentoo.org> +sqlite-3.7.15.1.ebuild:
  Version bump. Ebuild by Arfrever.

  18 Dec 2012; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.14.1.ebuild:
  Stable for ia64, wrt bug #446522

  16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.14.1.ebuild:
  Stable for ppc, wrt bug #446522

  16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.14.1.ebuild:
  Stable for x86, wrt bug #446522

  15 Dec 2012; Jeroen Roovers <jer@gentoo.org> sqlite-3.7.14.1.ebuild:
  Stable for HPPA (bug #446522).

*sqlite-3.7.15 (12 Dec 2012)

  12 Dec 2012; Markos Chandras <hwoarang@gentoo.org> +sqlite-3.7.15.ebuild:
  Version bump. Ebuild by Arfrever

  10 Dec 2012; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.14.1.ebuild:
  Stable for ppc64, wrt bug #446522

  09 Dec 2012; <ago@gentoo.org> sqlite-3.7.14.1.ebuild:
  Stable for amd64, wrt bug #446522

  08 Dec 2012; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.13.ebuild:
  Stable for ppc64, wrt bug #428080

  10 Oct 2012; Mike Gilbert <floppym@gentoo.org> sqlite-3.7.14.1.ebuild: