@@ -8,6 +8,7 @@ DIST sqlite-autoconf-3071300.tar.gz 1845778 SHA256 ac566819f82ec4cc2ff6c5cc90987
 DIST sqlite-autoconf-3071401.tar.gz 1832051 SHA256 d46d302a63b23d9c3b80e519be12cb7d6a8d3da57bd9c119341a0aa8b3b28692 SHA512 0d66e32e5d5d6d83f106f1dea66d08c96846a4c74d4a536be7eeb9f30823988fbc3ecb7377fcddc5c2fa06ad94dd0a27f7f6ef4665718354eb92edc8431631c9 WHIRLPOOL 93f15bec26e44840b9f3e81173f9de00769359e0dc302c1f93bd19641618aaa780e50764a8ec35aa20e91bbae114f49817acf6fb6338ca5eecd5fc87978c9ce8
 DIST sqlite-autoconf-3071500.tar.gz 1846740 SHA256 fee53abf5ce8f44ef37cdc734551d82295fc933f522911d371d3421ccd305d48 SHA512 284b30102db1a9b58e33d4eee14a2b650abe9a61dcb0187164b81d07a5a235dce98eb53386dc4ff5fbcd8a527a2c5e57ccfd8f63b3ee4aa06adb62e45ccc4228 WHIRLPOOL b0ca486b12584f8794763026f970a32be0029601aa1b2c3483e3d4cd35cd2d9289a6e69183ef5b26ac1f85797b4bfc5e861bb12fc8bebc341b85963651daa7c9
 DIST sqlite-autoconf-3071501.tar.gz 1846768 SHA256 e8809bd9a292be777f76c97c7e77ab41f7d1020776ded5a631da3985b4b26afd SHA512 2230752e989541f51189762dbb76e6dc9249d72a2f75f2adba13aff54f0da3128d394962d836cc63a9d20a09c4281e85f0687fe8b72d2e0e9bd88a7dd17d925a WHIRLPOOL b9adf9f84b9c6101a7d8bd5f99e0ed29a0cd6980711c52fc0aba99d8ff31008a53e88eb7b45662ce6a9eb7d754117c9f455216e00a4b6171f98db839b55e642d
+DIST sqlite-autoconf-3071502.tar.gz 1846778 SHA256 782d16b797f6ca879f6f679ba3fb6ceb54bcb0cab65feef332058bf04b36ba8c SHA512 ccec842f649c1dd47aed4712fc775d41097daca895ccc8b7fee24771f6c1832fb5210473f62dc62d4391c0a47ed3dfc9b92046fa7937aeb859105680942da082 WHIRLPOOL bba4dfd6482fe2164d6d7719ca6202771dc6eb252e4e9c42473d4d77e99039097be6c1f35601b267ba6161c635766e5b3d4754324d1f2ccdbc2a671ddd68896c
 DIST sqlite-doc-3071201.zip 4088017 SHA256 e86542934b1d47780f9e1fe415b5b792feabc8d520a28f9f65b049922a8fa2e5 SHA512 fa068d65b8b37866b12ddb49504ff2a37a95c705e19257a4d737ac0921e68c5d58f64207fa64c54e1da217644c08398e1c59b96efb480b8b49997322474b5e71 WHIRLPOOL a5e389a46364a3c57babc528f8c569aa05803396b99cf84af22d2a0e0d43406854c5883ee704b518755ee35b9673671b4b862444c493dfd5d2c12860f71b6a39
 DIST sqlite-doc-3071300.zip 3868922 SHA256 7212d48110b7b39a64be3dd48ab7ad9e782330dd0709c474f1ae4f3e394c04bf SHA512 8fa9bef286919fcc0960b54e3501321ada89d442e0c83ad48ece35cce01996d35ae6a810a01debe2a3485ceab90f3bffddf48b42adcb940f4fb6353e70cac963 WHIRLPOOL 549cc7a7218c83e118a29ea55b8cc1f360cfb2b04b8ea857f7ff0aa038c37256d625a27ab239b325def3bb59e3d9423b15a800fdc412315f040dfeed2deafe42
 DIST sqlite-doc-3071400.zip 4109131 SHA256 d427a538339e7641168d034b6d07b241014e87330c143372a47f1ce082262a4a SHA512 0475f7a894ecf7daa942b85cd136efdd8e46cb0f70ae781ef1ac7a0e1b145a0a49a04abc2afc641b4e042c4fb90cecf2d1eda3ed856e9aaa8a27876090b7cf06 WHIRLPOOL 9ac485d5f5b4e2ae09b1763abf9e43fc83dea2f9be5bbd8309956abbc55e70f124240580614546a8e776340fc0b2d4bcfd60392f554581d36a4316c17eee4bf0
@@ -17,11 +18,13 @@ DIST sqlite-src-3071300.zip 4923284 SHA256 4cf9b373cbdf1e1ae7f343b40e8a4007b298d
 DIST sqlite-src-3071401.zip 4966093 SHA256 cba6c248cdab98644e54a4f7cb378d0f371459214603ac3d522eb1a8a4215ced SHA512 c42d4ab15ab992a3bf297e5049aad6c7c9adc211b04e9cb06d397e1a6c73f5f7f9e329a0db0b8f7296d2705999001bcc44a76148fcdd2c8b4757b09664140939 WHIRLPOOL e09ae98e090b4351a8da101fd9a60c0bb02ddc7aa7a072f0824bf3a303502a0120a6068d4b3dac2d81aef40754991793a91e7c464f12ee783174f104903600df
 DIST sqlite-src-3071500.zip 5004578 SHA256 dbf550f0b991d0ec7cb138fb98eaf0496601fbdb24def1d4e723cf34c5394e13 SHA512 995efbc533555a424d7740134484be2606e7a631864edf7874f87c929f4728d77c5ee712cb52b2323830641d25ba55b482bd475d41798dd3a71c0ef474ae3bbc WHIRLPOOL df1ff8309be713698eff290bcd5983db7fea77d3bc03d42d19ec84b8e0dc01c4b033e452cb4c270e4a4b8ee711f56b9f3ebece362f982925ce87387d09c2cf74
 DIST sqlite-src-3071501.zip 5005531 SHA256 af71ae7d9145ff4702214515fb13aa46f1cb9b4f37b90f6f20992c7daf131488 SHA512 b455d87cce8b4ed5d2c4fbb0499d4d84d2ff43c5e7a808cc98b6121d9794c8d820b74b9dc1bb58c7df92ffa0bb8d8debb918da61b3a313898a5dfb72e0e160f5 WHIRLPOOL 705d647c608894bbe0a9ba511785b463b984abf1c14dd5a337873c6ccc00481ba65c797f36b35cfbb3effeee07c70829fad75e76765ed944a219bee7de9f128f
+DIST sqlite-src-3071502.zip 5005498 SHA256 a44b38caed99f9538d07a6ad417d562c99416ec0f79ad29d5e60ad69a8866d87 SHA512 aa73497eca9d6ed8d4e25cb560a9a53d2014f30d3df2a9d1bb24ca4ac829c6f5955515d0046b33f2203ff0022043b15ac3e882f35191463e0022c83614fb41db WHIRLPOOL b12756e24e3f630d615ee891c44515cb5459c54409ddf76da5d6220f75cfa4a9e502bd84a46bd51ebe517c5dfca0f3fe20ec1d18bf45918706a5dcbe4b0bfe70
 EBUILD sqlite-2.8.16-r5.ebuild 2908 SHA256 daca9e85af72e7e3defa71794ee56b2c724a428116a7cb696619de7c9548b7eb SHA512 16b1f35f138e3808a4e3db60b644a8051d8b138670f2c1a9df00c98eec05a7c7cb711a9aa096a7486384eeb6aa6aeb5f2eeab690c5b6cb9f124319bdb6a3b8dd WHIRLPOOL a5df9e17fd81d4c374335db841411ce0ab7959c2a86fa8dddcd735026ecc831d4239ce6f82a456fccf325fbcf69c6d2097fa8c959f1422258df63739b478e00c
 EBUILD sqlite-3.7.12.1.ebuild 4447 SHA256 dc40c5d5040c5a6af12dd47af81fdb8a17e80bbfe78e784902ca79fdf0d2ed7c SHA512 888b8ac1ff9fe57cb0bc4f8667269424c9a781b9b2bb78017c1005f9860991658b830e9813b4939141dfe691f506f7d48b2711bd2e9e51c2dd1af85a2b64877c WHIRLPOOL 9ff8003aedc921911ce6c500b854cb466c1bb64fad679c2f7da75505039c7cc79babd73253bb4402fb8609fc3ccfb7c2e52a9de60cefb0e6e503899eb1fa8e72
 EBUILD sqlite-3.7.13.ebuild 4445 SHA256 7e63624d9fe352911093010f6dff9ebbbc1ae571bcc390d164a091524b142d91 SHA512 351ddcf7a4bd8c35fe3879fb85a2fbe5d624747488d59c1ce3f2031f9bb8d2c79e2b1a94f1baf8a6968002e52e22fd6f6af090ab884fd7475c7b2e8ce1fa543b WHIRLPOOL 75dc1540c9e8004500fc61268ae8a94c19fcce2f5a0b9afcb89f032746d44b7238de2ab616d3bb1083052fec9ce8309a9f29c62d64ef96236945e22057d7bc68
 EBUILD sqlite-3.7.14.1.ebuild 4533 SHA256 d7baa9de88456e420c25dd87273c61b20a4833d071a533974b036482c1be9ea3 SHA512 d6898f6c0bcfcc63418d1490fe67f0fa5d7cf54c556d877d4565fa41a693aa712834f30495567d329e39f2a468c642dc71d41a35737dd24284d5a01dd5442e82 WHIRLPOOL 13dbea7e0908c2189f202d0b70d04bf22cd1b24d31ba20962695b0825d689b29d1f61a47d4cbec6da001f2d9483787fa6efc9c3803ed266fdabfbdea529e6451
 EBUILD sqlite-3.7.15.1.ebuild 4572 SHA256 19c71e3007c19ebc5b1025db75ef3ca2c78446aa6926c11107027009e6842bad SHA512 c8bec637143e660ecef4303802473c547e1ba135abc0275e7f86c1242d73444776543d6a41e10ceb79216c3df89ae0ad498dbae8cf957a0f5dc4807620a72ff7 WHIRLPOOL b6e05b1e21c5bb46b0836c67f76cf6103d6d7e433043c2ab836243ace9eab67ff74ad3238cd02653be89788dbffdc8b35e7acff107956c694cc881ce60d64598
+EBUILD sqlite-3.7.15.2.ebuild 4550 SHA256 090fd978face59a06c85137ac81d7d6c3fcf9557ec74e7fa3b4ffc7d72d7f40e SHA512 a9e801e1543184f128c1a385c1b6d9615f5b3505f9672bf86c1f9f6a774f399a56407a055e574f2952ac7f1a39589feec28dc89663cf3bafeea7e0d3ae98c22a WHIRLPOOL 1cc9943af4a30199e407e25268d0b9d12a4fddb802a302bdc38a58d8d725276a194a8fd4e56fccf3bb4bde090c7c3e08c7a91277d1fb2219cfe4300abff1b41f
 EBUILD sqlite-3.7.15.ebuild 4542 SHA256 6a7da53cd668ee70a1ca040795fcc83506aa52a942882acd568c9a0ecc9df047 SHA512 cc921bef93388af482bbba2bd557891c85e48e5b3dc2df7d3d9899ac70d8d7ea98cb187e902a611213bdbbca7988464baddfaa44ca5a3d2619a49cc2fa32d9d4 WHIRLPOOL ef6f1522b98b13593d6c50c51ccaa411fb6349ec66d4b2287ede75d9b08fe13678200aec6e2ed2905f70ec75a0ab2da966d1ef86bccd88d6caafe3319982aa0e
-MISC ChangeLog 60568 SHA256 d0d2d96d055158bd859e4cc56f4fe869694201f7494720cee3e350dd00072be9 SHA512 6c545b1ec9b746bdea89a676d8a1be3ec6087cb7cb157a482869079bdf9953d3325307b6c0c96876a0b1415640b24329e0eb053e4f2da39f2df3b1c9130ea9d8 WHIRLPOOL bc4e1262bc5ee2e595b261000431d9af82635699c860341710ee2d2eb1e35658fb7241e79860b1a954151cc55c0b6bf6349b11ab9cb161a4e7b06b523446e36f
+MISC ChangeLog 60708 SHA256 4fe28a22080a857196713466d034cbb5d1627304a69a000d0022dd1c9d53c98b SHA512 00dd855a88fb1158f7e4a42549272e77cdbbf8cd32c1e18c2f439ed00ba7446e9e504d83a47fe4d54ebb790794475c2fdc2779323a84047881cbc46036d392ce WHIRLPOOL 8beac08fc4d3d0e29a2a8c44646500434b866a0f0cb4437fb70b8766df8f6c76cfec05de2ed1429f43e3835536680c898aac0fb9421bf92d157c32493f83da0e
 MISC metadata.xml 902 SHA256 6cbb366bfd9b6ff881ab0c589b97667ef78426fa1fc1619abf20c098ddf58c94 SHA512 a1ec84fba5c736b8cca9b0c272b7232e346faee0d1a85d29d2873ce2bc29cdb430c1545cf107fa514e5434eda19f56a398f06dac6e868edd287bdb2612614ae0 WHIRLPOOL 49aa7d39536fa79259302e433f27fd1bfe27793f311b70f0da9eee4d5b6654c79fd7c7593df556dc11ebcf7577bcea32219bcb5dfd87d5c559b82c53e3f667f6
