@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.445 2013/01/05 22:37:50 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.446 2013/01/17 05:46:51 pinkbyte Exp $
+
+*sqlite-3.7.15.2 (17 Jan 2013)
+
+  17 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> +sqlite-3.7.15.2.ebuild:
+  Version bump, wrt bug #452606
 
   05 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> sqlite-3.7.15.1.ebuild:
   Add support for building static library, wrt bug #417907. Thanks to ari
